--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,24 +1,57 @@
 .company {
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
+    
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;   
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+            
   }
   
-  .section-client {
+  .client{
     text-align: center;
-    padding-bottom: 94px;
-    padding-top: 94px;
+    padding-bottom: 60px;
+    padding-top: 60px;
+
+    @include desk {
+      padding-bottom: 94px;
+      padding-top: 94px;
+    }
+  }
+
+  .card {
+    width: calc(50% - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
   }
   
-  .card {
-    margin-right: 30px;
+
+  .client-title {
+    color: var(--primary-text-color);
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+
+    @include desk {
+      font-size: 36px;
+      margin-bottom: 50px;
+    }
   }
+
+
+  
   
   .client-icons {
     display: -webkit-box;
@@ -60,13 +93,4 @@
     fill: var(--accent-color);
   }
   
-  .team-title {
-    color: var(--primary-text-color);
-    font-family: "Roboto";
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-  }
+ 
