--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -1,27 +1,61 @@
 .feature {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+      }
   }
+
+  .feature__list {
+    justify-content: space-between;
+    display: -webkit-box;
+    display: -ms-flexbox;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+  }
+  }
+
+  .feature__item {
+    height: auto;
+    @media screen and (min-width: 768px) {
+                margin-left: 30px;
+                width: calc(100% / 2 - 30px);
+    }
+    
+    @media screen and (min-width: 1200px) {
+               margin-left: 30px;
+               width: calc(100% / 4 - 30px);
+    }
+    }
   
-  .feature-title {
+  
+  .feature__title {
     color: var(--primary-text-color);
-    font-family: Roboto, sans-serif;
-    font-style: 400;
+    font-family: "Roboto";
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 10px;
+    text-align: center;
+
+    @media screen and (min-width: 480px) {
+            text-align: center;
+        }
+    @media screen and (min-width: 768px) {
+            text-align: left;
+        }
   }
   
-  .feature-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
   
-  .feature-box {
+  
+  .feature__box {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -32,24 +66,24 @@
         -ms-flex-pack: center;
             justify-content: center;
     margin-bottom: 30px;
-    width: 270px;
+    // width: 270px;
     height: 120px;
     background: rgb(245, 244, 250);
     border-radius: 4px;
   }
   
-  .feature-list li {
-    width: 270px;
-    height: auto;
-    margin-right: 30px;
-  }
   
-  .feature-text {
+  
+  .feature__text {
+    margin-bottom: 30px;
     color: var(--secondary-text-color);
     font-family: Roboto;
-    font-style: 400;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    
+    @media screen and (min-width: 1119px) {
+      margin-bottom: 0;
+    }
   }
