--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,23 @@
 .header {
     border: 1px solid #ECECEC;
+    height: 60px;
+
+    @include tab {
+      height: 80px;
   }
+  }
+
+  .header__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 60px;
+
+    @include tab {
+      height: 80px;
+  }
+  }
+ 
   
   .logo {
     color: var(--accent-color);
@@ -45,39 +62,49 @@
     color: var(--white-color);
   }
   
-  .header-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  
   
   .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    align-items: center;
   }
   
   .site-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: none;
+
+    @include tab {
+        display: flex;
+        
+    }
+
     padding-top: 32px;
     padding-bottom: 32px;
-  }
+}
+
   
   .site-nav .item + .item {
     margin-left: 50px;
   }
   
   .auth-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: auto;
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-  
+    display: none;
+    padding-top: 21px;
+    padding-bottom: 21px;
+
+    @include tab {
+        display: block;
+    }
+
+    @include desk {
+        display: flex;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        margin-left: auto;
+    }   
+}
+
   .icon-mail,
   .icon-tel {
     margin-right: 10px;
