--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -11,19 +11,28 @@
     background-size: cover;
   }
   
-  .hero h1 {
+  .hero__title {
     color: var(--white-color);
-    width: 696px;
-    margin: 0 auto;
-    font-family: Roboto;
-    font-style: 400;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.3;
-    text-align: center;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
-    margin-bottom: 30px;
-    margin-top: 0;
+    font-family: "Roboto";
+    font-style: normal;
+    max-width: 360px;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 auto;
+    margin-bottom: 40px;
+
+    @include desk {
+      max-width: 696px;
+  
+    font-size: 44px;
+    line-height: 1.36;
+    
+    }
   }
   
   .btn-hero {
