--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,32 +1,58 @@
 .team {
+    text-align: center;
     background-color: var(--background-secondary-section);
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
   }
-  
-  .team-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
   }
-  
-  .team .team-title {
+
+  .team .team__title {
     color: var(--primary-text-color);
     font-family: Roboto;
-    font-style: 400;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 33px;
+  }
   }
   
-  .team-card {
-    margin-right: 30px;
+  .team__list {
+    margin-bottom: -30px;
+    
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+    }
+  }
+  
+
+  
+  .team__card {
+    margin-bottom: 30px;
+
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @include tab {
+      margin-left: 30px;
+      width: calc(100% / 2 - 30px);
+  }
+
+  @include desk {
+      width: calc(100% / 4 - 30px);
+  }
   }
   
   .social-link {
