--- a/scss/layouts/_container.scss
+++ b/scss/layouts/_container.scss
@@ -1,3 +1,4 @@
+
 .container {
     width: 1200px;
     margin-left: auto;
@@ -5,4 +6,16 @@
     padding-left: 15px;
     padding-right: 15px;
     /* border: 2px solid tomato; */
+
+    @media screen and (min-width: 480px) {
+      width: 480px;
   }
+
+    @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+  } 
