--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,9 +1,10 @@
+
 .company {
     
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
     
