--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,19 +1,22 @@
 
 .company {
-    
+  
     display: flex;
     align-items: center;
     justify-content: center;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
     
-    display: -webkit-box;
-    display: -ms-flexbox;
-    -webkit-box-align: center;
-    -ms-flex-align: center;   
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // -webkit-box-align: center;
+    // -ms-flex-align: center;   
+    // -webkit-box-pack: center;
+    // -ms-flex-pack: center;
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+    }
             
   }
   
@@ -32,6 +35,14 @@
     width: calc(50% - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+
+    @include tab {
+      width: calc(100% / 3 - 30px);
+  }
+
+    @include desk {
+      width: calc(100% / 6 - 30px);
+  }
   }
   
 
@@ -40,7 +51,7 @@
     font-family: "Roboto";
     font-weight: 700;
     font-size: 28px;
-    line-height: 1.16;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 30px;
@@ -66,7 +77,7 @@
             align-items: center;
     border: 1px solid rgb(175, 177, 184);
     border-radius: 4px;
-    width: 170px;
+    // width: 170px;
     height: 92px;
     -webkit-transition-property: border-color;
     transition-property: border-color;
