--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -5,6 +5,12 @@
     text-align: left;
     padding: 0;
   }
+
+  .subscription{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
   
   .form-field {
     margin-bottom: 10px;
@@ -34,17 +40,28 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    min-width: 358px;
+    width: 100%;
+    // min-width: 358px;
     height: 50px;
     padding: 0;
     padding-left: 16px;
     margin-right: 12px;
+    margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.25;
     color: rgba(255, 255, 255, 0.6);
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
+
+    @include tel {
+      width: 450px;
+  }
+
+  @include desk {
+      width: 358px;
+      margin-bottom: 0;
+  }
   }
   
   .form-submit-btn {
@@ -112,3 +129,5 @@
     margin-left: 10px;
     fill: #FFFFFF;
   }
+
+
