--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 
 @import "./utils/base";
-@import "./utils/mixin";
+@import "./utils/mixins";
 
 @import "./utils/variables";
 @import "./utils/hidden";
