--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,69 +1,29 @@
+.section-client {
+  text-align: center;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
 
 .company {
-  
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-left: -30px;
     margin-bottom: -30px;
-    
-    // display: -webkit-box;
-    // display: -ms-flexbox;
-    // -webkit-box-align: center;
-    // -ms-flex-align: center;   
-    // -webkit-box-pack: center;
-    // -ms-flex-pack: center;
-    @media screen and (min-width: 1200px) {
-      flex-wrap: nowrap;
-    }
-            
   }
   
-  .client{
-    text-align: center;
-    padding-bottom: 60px;
-    padding-top: 60px;
-
-    @include desk {
-      padding-bottom: 94px;
-      padding-top: 94px;
-    }
-  }
-
   .card {
     width: calc(50% - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
-
-    @include tab {
-      width: calc(100% / 3 - 30px);
   }
-
-    @include desk {
-      width: calc(100% / 6 - 30px);
-  }
-  }
-  
-
-  .client-title {
-    color: var(--primary-text-color);
-    font-family: "Roboto";
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 30px;
-
-    @include desk {
-      font-size: 36px;
-      margin-bottom: 50px;
-    }
-  }
-
-
-  
   
   .client-icons {
     display: -webkit-box;
@@ -77,7 +37,6 @@
             align-items: center;
     border: 1px solid rgb(175, 177, 184);
     border-radius: 4px;
-    // width: 170px;
     height: 92px;
     -webkit-transition-property: border-color;
     transition-property: border-color;
@@ -105,4 +64,13 @@
     fill: var(--accent-color);
   }
   
- 
+  .team-title {
+    color: var(--primary-text-color);
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
