--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -1,42 +1,12 @@
 .feature {
-    padding-top: 60px;
-    padding-bottom: 60px;
-
-    @media screen and (min-width: 1200px) {
-      padding-top: 94px;
-      padding-bottom: 94px;
-      }
+  padding-top: 60px;
+  padding-bottom: 60px;
   }
-
-  .feature__list {
-    justify-content: space-between;
-    display: -webkit-box;
-    display: -ms-flexbox;
-
-    @media screen and (min-width: 768px) {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: -30px;
-  }
-  }
-
-  .feature__item {
-    height: auto;
-    @media screen and (min-width: 768px) {
-                margin-left: 30px;
-                width: calc(100% / 2 - 30px);
-    }
-    
-    @media screen and (min-width: 1200px) {
-               margin-left: 30px;
-               width: calc(100% / 4 - 30px);
-    }
-    }
   
-  
-  .feature__title {
+  .feature-title {
     color: var(--primary-text-color);
-    font-family: "Roboto";
+    font-family: Roboto, sans-serif;
+    font-style: 400;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -44,46 +14,50 @@
     text-transform: uppercase;
     margin-bottom: 10px;
     text-align: center;
-
-    @media screen and (min-width: 480px) {
-            text-align: center;
-        }
-    @media screen and (min-width: 768px) {
-            text-align: left;
-        }
   }
   
-  
-  
-  .feature__box {
+  .feature-list {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-bottom: 30px;
-    // width: 270px;
-    height: 120px;
-    background: rgb(245, 244, 250);
-    border-radius: 4px;
+    // display: flex;
   }
   
-  
-  
-  .feature__text {
+  .feature-box {
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // -webkit-box-align: center;
+    //     -ms-flex-align: center;
+    // -webkit-box-pack: center;
+    //     -ms-flex-pack: center;
+        text-align: center;
+        border-radius: 4px;
+        margin-bottom: 30px;
+        padding-top: 25px;
+        padding-bottom: 25px; 
+        background: rgb(245, 244, 250);
+  }
+
+//   .icon-feature {
+//     text-align: center;
+// }
+
+  .feature-list li {
+    // width: 270px;
+    height: auto;
     margin-bottom: 30px;
+  }
+
+  .feature-list li:last-child {
+    margin-bottom: 0;
+  }
+  
+  .feature-text {
     color: var(--secondary-text-color);
     font-family: Roboto;
+    font-style: 400;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    
-    @media screen and (min-width: 1119px) {
-      margin-bottom: 0;
-    }
+   
   }
