--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -5,12 +5,6 @@
     text-align: left;
     padding: 0;
   }
-
-  .subscription{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
   
   .form-field {
     margin-bottom: 10px;
@@ -36,58 +30,50 @@
   .subscription-input {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+
+    display: flex; 
+    align-items: center;       
     width: 100%;
-    // min-width: 358px;
+    min-width: 358px;
     height: 50px;
+    margin-bottom: 20px;
     padding: 0;
     padding-left: 16px;
     margin-right: 12px;
-    margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.25;
     color: rgba(255, 255, 255, 0.6);
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
-
-    @include tel {
-      width: 450px;
-  }
-
-  @include desk {
-      width: 358px;
-      margin-bottom: 0;
-  }
   }
   
   .form-submit-btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 200px;
-    height: 50px;
-    padding: 0;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
     color: rgb(255, 255, 255);
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--accent-color);
-    border: none;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.87;
+    letter-spacing: .06em;
+    width: 200px;
+    height: 50px;
     border-radius: 4px;
-    cursor: pointer;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: auto;
+    padding-right: auto;
+    justify-content: center;
+    text-align: center;
+    border: none;
+  
     -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -129,5 +115,3 @@
     margin-left: 10px;
     fill: #FFFFFF;
   }
-
-
