--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,85 +1,83 @@
 .header {
     border: 1px solid #ECECEC;
     height: 60px;
-
-    @include tab {
-      height: 80px;
   }
-  }
-
-  .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 60px;
-
-    @include tab {
-      height: 80px;
-  }
-  }
- 
   
   .logo {
     color: var(--accent-color);
-    margin-right: 93px;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    font-family: Raleway;
-    font-style: 400;
+    font-family: 'Raleway';
+    font-style: normal;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
+    margin-top: 16px;
+
   }
   
   .header span {
     color: var(--logo-studio-color);
   }
   
+  .logo-footer {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
   
+  .img-logo-footer {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    text-decoration: none;
+  }
   
+  .footer span {
+    color: var(--white-color);
+  }
+  
+  .header-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   
   .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    align-items: center;
   }
   
   .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: none;
-
-    @include tab {
-        display: flex;
-        
-    }
-
     padding-top: 32px;
     padding-bottom: 32px;
-}
-
+  }
   
   .site-nav .item + .item {
     margin-left: 50px;
   }
   
   .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: none;
     padding-top: 21px;
     padding-bottom: 21px;
-
-    @include tab {
-        display: block;
-    }
-
-    @include desk {
-        display: flex;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        margin-left: auto;
-    }   
 }
-
+  
+  
   .icon-mail,
   .icon-tel {
     margin-right: 10px;
@@ -158,3 +156,151 @@
     fill: var(--accent-color);
   }
   
+
+  .menu-open-btn {
+    width: 40px;
+    height: 40px;
+    display: block;
+    margin-left: auto;
+    background: none;
+    border: none;
+}
+
+.open-icon {
+  fill: currentColor;
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  padding-top: 21px;
+  padding-bottom: 48px;
+  transition: opacity 250ms,visibility 250ms;
+}
+
+.mob-menu .container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+  padding-left: 40px;
+  padding-top: 21px;
+  padding-bottom: 48px;
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: 21px;
+  background: none;
+  border: none;
+}
+
+.menu-close {
+  fill: currentColor;
+}
+
+.mob-menu-nav__link {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: .02em;
+  color: #212121;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-nav__link.current-mob {
+  color: #2196f3;
+}
+
+.mob-menu-nav__item+.mob-menu-nav__item {
+  margin-top: 32px;
+}
+
+.mob-menu-contakt {
+  margin-bottom: 64px;
+}
+
+.mob-menu-contakt__tel {
+  display: flex;
+  align-items: center;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: .02em;
+  color: #2196f3;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-soc-list:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33,33,33,.2);
+}
+
+.mob-soc-link {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: .02em;
+  color: #2196f3;
+}
+
+.mob-menu-contakt__tel {
+  display: flex;
+  align-items: center;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: .02em;
+  color: #2196f3;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-contakt__email {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: .02em;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-soc {
+  display: flex;
+}
+
+.mob-soc-list:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33,33,33,.2);
+}
+
+.mob-soc-link {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: .02em;
+  color: #2196f3;
+}
+
+.mob-menu-contakt__item+.mob-menu-contakt__item {
+  margin-top: 32px;
+}
