--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
-    background-color: var(--background-hero);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/Imghero.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Imghero.jpg);
+    display: flex;
+    align-items: center;
+    height: 400px;
     padding-top: 200px;
     padding-bottom: 200px;
     margin: 0 auto;
@@ -9,14 +9,60 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: var(--background-hero);
+    
+    background-image: -webkit-gradient(linear, left top, left bottom, 
+    from(rgba(47, 48, 58, 0.4)), 
+    to(rgba(47, 48, 58, 0.4))), 
+    url(/images/hero-mob.jpg);
+
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
+    rgba(47, 48, 58, 0.4)), 
+    url(/images/hero-mob.jpg);
+
+    @include ret {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/hero-mob-2x.jpg");
+    }
+    @include tab {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/hero-tab.jpg");
+      @include ret {
+        background-image: linear-gradient(
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url("../images/hero-tab-2x.jpg");
+      }
+    }
+    @include desk {
+      height: 600px;
+      max-width: 1600px;
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/hero.jpg");
+      @include ret {
+        background-image: linear-gradient(
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url("../images/hero-2x.jpg");
+      }
+    }
+
+  
   }
   
-  .hero__title {
+  .hero h1 {
     color: var(--white-color);
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 1.62;
-    letter-spacing: 0.06em;
     font-family: "Roboto";
     font-style: normal;
     max-width: 360px;
@@ -24,35 +70,29 @@
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
-    margin-bottom: 40px;
+    color: #fff;
+    font-size: 26px;
+    font-weight: 900;
+    line-height: 1.62;
+    letter-spacing: .06em;
 
-    @include desk {
-      max-width: 696px;
-  
-    font-size: 44px;
-    line-height: 1.36;
-    
-    }
+    margin-bottom: 30px;
   }
   
   .btn-hero {
     color: var(--white-color);
     background-color: var(--accent-color);
     font-family: Roboto;
-    font-style: 400;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.8;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 24px;
+    padding-right: 24px;
     margin: auto;
     border-radius: 4px;
     border: 4px solid var(--accent-color);
