--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -14,6 +14,12 @@
     opacity: 0;
     pointer-events: none;
   }
+
+  .is-hidden {
+    opacity: 0;
+    pointer-events: 0;
+    visibility: hidden;
+}
   
   .modal {
     width: 528px;
@@ -193,13 +199,23 @@
     cursor: pointer;
   }
   
+ 
   
+  .footer-cta {
+    display: block;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
   
   .subscription {
     display: -webkit-box;
     display: -ms-flexbox;
-    // display: flex;
     -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
+    -ms-flex-align: baseline;
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
   }
