--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,18 +1,34 @@
 .portfolio {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   
   .portfolio-filter {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-bottom: 50px;
+    -ms-flex-pack: center;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin-bottom: 40px; 
   }
-  
+
+  .portfolio-filter li {
+    margin-right: 8px;
+    margin-left: 8px;
+    margin-bottom: 15px;
+  }
+
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+
+    // margin-left: -30px;
+    // margin-bottom: -30px;
+  }
+
   .btn {
     font-family: "Roboto";
     font-style: normal;
@@ -37,19 +53,9 @@
     background-color: var(--accent-color);
   }
   
-  .portfolio-filter li {
-    margin-left: 8px;
-  }
+
   
-  .portfolio-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
-  }
+ 
   
   .portfolio-item {
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
