--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -64,13 +64,14 @@
     fill: var(--accent-color);
   }
   
-  .team-title {
+  .client-title {
     color: var(--primary-text-color);
-    font-family: "Roboto";
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
     text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
+    font-family: Roboto;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.84px;
+    margin-bottom: 30px;
   }
