--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -23,6 +23,11 @@
     width: calc(50% - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      
+    width: calc(33.3333333333% - 30px);
+}
   }
   
   .client-icons {
