--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,12 +5,23 @@
   padding-bottom: 60px;
 }
 
+  @media screen and (min-width: 768px) {
+    .footer-flex {
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
+  }
+  }
+ 
 .address {
     // margin-bottom: 60px;
     font-style: normal;
     // width: 231px;
     // height: 81px;
     // margin-right: 70px;
+    @media screen and (min-width: 768px) {
+      margin-right: 165px;
+    }
   }
 
   .logo-footer {
