--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -4,6 +4,14 @@
     padding-bottom: 60px;
 
   }
+
+  @media screen and (min-width: 768px) {
+    .team-list {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+    }
+  }
   
   // .team-list {
   //   // display: flex;
@@ -29,11 +37,17 @@
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  }
 
-  .team-card:last-child {
-    margin-bottom: 0px;
+    @media screen and (min-width: 768px){
+      margin-left: 30px;
+      width: calc(50% - 30px);
+    }
+
+    
   }
+  // .team-card:last-child {
+  //   margin-bottom: 0px;
+  // }
   
   .social-link {
     width: 20px;
