--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -44,6 +44,10 @@
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
+
+    @media screen and (min-width: 480px) {
+    width: 450px;
+   }
   }
   
   .form-submit-btn {
