--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -2,21 +2,24 @@
   text-align: center;
   padding-bottom: 60px;
   padding-top: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 }
 
 .company {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     margin-left: -30px;
     margin-bottom: -30px;
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+  }
   }
   
   .card {
@@ -79,4 +82,10 @@
     line-height: normal;
     letter-spacing: 0.84px;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 36px;
+      letter-spacing: 1.08px;
+  }
   }
