--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -5,6 +5,18 @@
     text-align: left;
     padding: 0;
   }
+
+  .subscription {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+  }
+
+  }
   
   .form-field {
     margin-bottom: 10px;
@@ -45,17 +57,17 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
 
-    @media screen and (min-width: 480px) {
+   @media screen and (min-width: 480px) {
     width: 450px;
+    width: 358px;
+    margin-bottom: 0;
+}
    }
-  }
+
   
   .form-submit-btn {
-    -webkit-box-align: center;
-    -webkit-box-pack: center;
     color: rgb(255, 255, 255);
-    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--accent-color);
     display: flex;
     align-items: center;
@@ -76,6 +88,10 @@
   
     -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 12px;
+  }
   }
   
   .modal-btn {
