--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,10 @@
 .header {
     border: 1px solid #ECECEC;
     height: 60px;
+
+    @media screen and (min-width: 768px) {
+      height: 80px;
+    }
   }
   
   .logo {
@@ -11,14 +15,12 @@
     font-size: 24px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    margin-top: 16px;
-
+    // margin-top: 16px;
   }
   
   .header span {
     color: var(--logo-studio-color);
   }
-  
   
   
   .header-nav {
@@ -28,29 +30,42 @@
   }
   
   .navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .site-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: none;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      margin-left: 88px;
   }
+}
+  
   
   .site-nav .item + .item {
     margin-left: 50px;
   }
   
   .auth-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: none;
     padding-top: 21px;
     padding-bottom: 21px;
+    margin-left: auto;
+
+    @media screen and (min-width: 768px) {
+      display: block;
+  }
+
+  @media screen and (min-width: 1200px){
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 }
   
   
@@ -63,6 +78,15 @@
   
   .header-item + .header-item {
     margin-left: 50px;
+    @media screen and (min-width: 768px) {
+      margin-left: auto;
+      margin-top: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 50px;
+    margin-top: 0;
+}
   }
   
   .site-nav .link {
@@ -99,7 +123,7 @@
     background-color: var(--accent-color);
     border-radius: 2px;
     left: 0;
-    bottom: -32px;
+    bottom: -28px;
   }
   
   .nav-current {
@@ -140,6 +164,10 @@
     margin-left: auto;
     background: none;
     border: none;
+
+    @media screen and (min-width: 768px) {
+    display: none;
+}
 }
 
 .open-icon {
