--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -3,16 +3,25 @@
     padding-top: 60px;
     padding-bottom: 60px;
 
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+  }
   }
 
-  @media screen and (min-width: 768px) {
-    .team-list {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: -30px;
+  .team-list{
+    flex-wrap: wrap;
+
+    @media screen and (min-width: 768px) {
+       display: flex;
+       margin-left: -30px;
+     }
+
+     @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
     }
   }
-  
+
   // .team-list {
   //   // display: flex;
   //   // flex-wrap: wrap;
@@ -29,6 +38,12 @@
     line-height: normal;
     letter-spacing: 0.84px;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 36px;
+      letter-spacing: 1.08px;
+  }
   }
   
   .team-card {
