--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -20,6 +20,10 @@
     margin-bottom: 10px;
     text-align: center;
 
+    @media screen and (min-width: 768px) {
+      text-align: left;
+  }
+
   @media screen and (min-width: 1200px) {
     text-align: left;
 }
