--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -59,8 +59,7 @@
 
    @media screen and (min-width: 480px) {
     width: 450px;
-    width: 358px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
    }
 
